--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
+    "http-status-codes": "^2.3.0",
     "kill-port": "^2.0.1",
     "moralis": "^2.27.2"
   }
