--- a/MyEtherWallet/package.json
+++ b/MyEtherWallet/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "antd": "^5.20.2",
+    "axios": "^1.7.5",
     "ethers": "^6.13.2",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
